--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -61,7 +61,7 @@
     width: 18rem;
   }
 
-  .section-4 .carousel-inner {
+  /* .section-4 .carousel-inner {
     margin-left: -14vmin;
-  }
+  } */
 }
